Nudging list on learn so it is no longer cutting in to side of page on mobile devices.

--- a/source/stylesheets/learn.css.scss
+++ b/source/stylesheets/learn.css.scss
@@ -1,5 +1,17 @@
 $small-max-width: 767px;
 
+.learn {
+
+  article ul {
+    padding-left: 1.5em;
+  }
+
+  .api-reference-list {
+    padding-left: 0;
+  }
+
+}
+
 .learning-tomster {
   float: right;
   width: 250px;
